--- a/treeLFA-demo.Rmd
+++ b/treeLFA-demo.Rmd
@@ -61,14 +61,14 @@ print(head(tree_str,10))
 
 
 With the input data prepared, the Gibbs-EM algorithm can be used to optimize alpha (The hypeparameter of the Dirichlet prior for topic weights) while doing the inference of other hidden variables. The number of topics to be inferred (argument "topic.number" in the "gibbs_EM_train" function below) needs to be set. The initial alpha (argument "alpha") is set to be (0.1,0.1,0.1,0.1), which was the true alpha used to simulate the data. On real world dataset, it is recommended to set alpha to be (1,0.1,...0.1).   
-In addition, the "burn_in" argument denotes the number of Gibbs sampling iterations in each E-step before the collection of samples of hidden variables (used for the optimization of alpha in the M-step). There are two stages of training. For both stages, the total number of EM cycles (arguements "cycle_1" and "cycle_2") and the number of hidden variables collected in the E-step can be set (arguement "opt_N_1" and "opt_N_2"). Note that in stage 1, "opt_N_1" is usually set to be 1 to speed up the traniing. In stage 2, "opt_N_2" can be set to a value larger than 1 to achieve more accurate optimization of alpha. 
+In addition, the "burn_in" argument denotes the number of Gibbs sampling iterations in each E-step before the collection of samples of hidden variables (used for the optimization of alpha in the M-step). There are two stages of training. For both stages, the total number of EM cycles (arguements "cycle_1" and "cycle_2") and the number of hidden variables collected in the E-step can be set (arguement "opt_N_1" and "opt_N_2"). Note that in stage 1, "opt_N_1" is usually set to be 1 to speed up the traniing. In stage 2, "opt_N_2" can be set to a value larger than 1 to achieve more accurate optimization of alpha. The Gibbs-EM training here will take about two minutes. 
 ```{r, echo=TRUE}
 ge_result <- gibbs_EM_train( topic.number=4,
                              data,tree_str,
                              burn_in=19, 
                              alpha=c(0.1,0.1,0.1,0.1),
-                             opt_N_1=1, cycle_1=100, 
-                             opt_N_2=10, cycle_2=50 )
+                             opt_N_1=1, cycle_1=1000, 
+                             opt_N_2=10, cycle_2=100 )
 ```
 In the result object "ge_result", values of all hidden variables and the hyperparameter alpha in the last cycle of the Gibbs-EM training are stored. The hidden variables include the probability variables of disease codes in topics (Phi), the indicator variables of disease codes in topics (I), the transition probability variables of the Markov process on the tree structure (rho), and the topic assignment variables for all individuals' disease codes (Z). The full likelihood of the treeLFA model in all Gibbs-EM cycle are also recorded, and can be plotted to monitor the convergence. 
 ```{r pressure, echo=TRUE, out.width="40%"}
